# ProjectMakefile

./: .cproject  .gitignore  .project  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  depend.sh  module.mk  prog
app/: main.c  main.d
ericsonj/embedded/: fft.c  fft.d  module.mk
sources/app/: main.c
sources/ericsonj/embedded/: fft.c  fft.h
tools/: tools.c  tools.d  tools.h  util.c  util.d  util.h
